# tinygrammar

./: .gitignore  CMakeLists.txt  LICENSE  README.md  start.sh
src/: inference.c  inference.h  main.c  tokenizer.c  tokenizer.h
